--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body {
 
 img {
     max-width: 100%;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 }
 
 .ag-format-container {
